clean up unused imports